@startuml
class gui.PlayerStatusPane {
- CustomHpBar onionHpBar
- CustomHpBar carrotHpBar
- Carrot carrot
- Onion onion
- HBox p1SkillBox
- HBox p2SkillBox
- VBox p1StatusBox
- VBox p2StatusBox
+ void update()
+ void setSkills(SkillButton,SkillButton,SkillButton,SkillButton,SkillButton,SkillButton)
- void updateStatusIcons(VBox,entity.base.Character)
}


class gui.SkillButton {
- Skill skill
- Button btn
- Text cooldownText
- ImageView iconView
- boolean isOwnerTurn
- GameManager gameManager
+ void updateUI()
+ void setTurnActive(boolean)
+ void onTurnStart()
}


class gui.ModeSelectMenu {
- Runnable onDoomedAction
- Runnable onClassicAction
+ void setOnDoomedAction(Runnable)
+ void setOnClassicAction(Runnable)
}


class gui.CustomHpBar {
- Rectangle bar
- Rectangle bg
- double maxWidth
- Timeline smoothAnim
+ void setHp(double)
+ void setRightSide()
}


class gui.IntroMenu {
- Runnable onAction
+ void setOnAction(Runnable)
}


class util.UIButton {
+ {static} StackPane SignButton(String,String,Runnable)
}

class gui.PowerBarPane {
- GameManager gameManager
- Rectangle bg
- Rectangle fg
- double BAR_WIDTH
- double BAR_HEIGHT
- double Y_OFFSET
+ void update(Character)
}


class gui.HowToMenu {
- Runnable onStartAction
+ void setOnStartAction(Runnable)
- VBox SkillDescription(String,String)
}


class gui.GameOverPane {
- Runnable onRestart
- Runnable onExit
+ void setOnRestart(Runnable)
+ void setOnExit(Runnable)
}


class gui.TurnInfoPane {
- Text turnText
- Text timerText
- Rectangle windBar
- ImageView windArrow
- StackPane windBarContainer
- double MAX_WIND_BAR_WIDTH
- double MAX_WIND_STRENGTH
- int lastWindDirection
+ void updateUI(int,PlayerTurn,Wind)
}


class gui.MainMenu {
- Runnable onHowToAction
- Runnable onStartAction
+ void setOnHowToAction(Runnable)
+ void setOnStartAction(Runnable)
}


class gui.GamePane {
- Canvas canvas
- ArrayList<GameObject> allObjects
- GraphicsContext gc
+ void drawObjects()
}




javafx.scene.layout.Pane <|-- gui.PlayerStatusPane
javafx.scene.layout.StackPane <|-- gui.SkillButton
gui.VBox <|-- gui.ModeSelectMenu
javafx.scene.layout.StackPane <|-- gui.CustomHpBar
gui.VBox <|-- gui.IntroMenu
javafx.scene.layout.Pane <|-- gui.PowerBarPane
gui.VBox <|-- gui.HowToMenu
javafx.scene.layout.StackPane <|-- gui.GameOverPane
javafx.scene.layout.VBox <|-- gui.TurnInfoPane
gui.VBox <|-- gui.MainMenu
gui.StackPane <|-- gui.GamePane
@enduml